# EpyNN

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  Untitled.ipynb  environ.yml  requirements.txt  settings.py  setup.cfg  setup.py
.github/workflows/: python-package-conda.yml  python-publish.yml
docs/: Convolution.rst  Data_Model.rst  Dense.rst  Dropout.rst  EpyNN_Model.rst  GRU.rst  Introduction.rst  LSTM.rst  Layer_Model.rst  RNN.rst  RNN_binary.ipynb  Template.rst  architectures.rst  conf.py  contribute.rst  epynn.rst  examples.rst  index.rst  nnlive  quickstart.rst  refs.bib  symlinks.sh  test.rst  workflows.rst
docs/_static/: dummy_boolean.rst
docs/old/: organization.rst
dpynn/: README.md
dpynn/commons/: maths.py  metrics.py  models.py
epynn/: initialize.py  settings.py  statistics.py
epynn/commons/: io.py  library.py  logs.py  loss.py  maths.py  metrics.py  models.py  plot.py  schedule.py
epynn/convolution/: backward.py  forward.py  models.py  parameters.py
epynn/dense/: backward.py  forward.py  models.py  parameters.py
epynn/dropout/: backward.py  forward.py  models.py  parameters.py
epynn/embedding/: backward.py  dataset.py  forward.py  models.py  parameters.py
epynn/flatten/: backward.py  forward.py  models.py  parameters.py
epynn/gru/: backward.py  forward.py  models.py  parameters.py
epynn/lstm/: backward.py  forward.py  models.py  parameters.py
epynn/network/: backward.py  evaluate.py  forward.py  hyperparameters.py  initialize.py  models.py  report.py  training.py
epynn/pooling/: backward.py  forward.py  models.py  parameters.py
epynn/rnn/: backward.py  forward.py  models.py  parameters.py
epynn/template/: backward.py  forward.py  models.py  parameters.py
epynnlive/: statistics.py
epynnlive/author_music/: prepare_dataset.ipynb  prepare_dataset.py  train.ipynb  train.py
epynnlive/captcha_mnist/: prepare_dataset.ipynb  prepare_dataset.py  train.ipynb  train.py
epynnlive/dummy_boolean/: prepare_dataset.ipynb  prepare_dataset.py  settings.py  train.ipynb  train.py
epynnlive/dummy_image/: prepare_dataset.ipynb  prepare_dataset.py  train.ipynb  train.py
epynnlive/dummy_string/: train.py  (+3 more)
nnlibs/: initialize.py  settings.py
(+418 files in other folders)
