[metadata]
name = EpyNN
version = 0.9b0
author = Florian Malard and Stéphanie Olivier-Van Stichelen
author_email = florian.malard@gmail.com
description = EpyNN: Educational python for Neural Networks.
long_description = file: README.md, CHANGELOG.md, LICENSE
license = GPL-3.0 License
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
install_requires =
    cycler==0.10.0
    kiwisolver==1.3.2
    matplotlib==3.4.3
    numpy==1.21.2
    Pillow==8.3.1
    Pygments==2.10.0
    pyparsing==2.4.7
    python-dateutil==2.8.2
    six==1.16.0
    tabulate==0.8.9
    termcolor==1.1.0
    texttable==1.6.4
    jupyter==1.0.0
    scipy==1.6.3
    wget==3.2
    importlib; python_version >= "3.7"
