[metadata]
name = EpyNN
version = 1.2.0
author = Florian Malard and Stéphanie Olivier-Van Stichelen
author_email = florian.malard@gmail.com
description = EpyNN: Educational python for Neural Networks.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0 License
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
include_package_data=True
