[metadata]
name = EpyNN
version = 1.2.11
author = Florian Malard and Stéphanie Olivier-Van Stichelen
author_email = florian.malard@gmail.com
description = EpyNN: Educational python for Neural Networks.
long_description = file: README.md
long_description_content_type = text/markdown
license = GPL-3.0 License
url = https://github.com/synthaze/EpyNN
project_urls =
    Bug Tracker = https://github.com/synthaze/EpyNN/issues
classifiers =
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3.7
    Operating System :: OS Independent

[options]
include_package_data=True
scripts =
    bin/epynn
package_dir =
    = .
packages = find:
python_requires = >=3.7

[options.packages.find]
where = .
